<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jit_control_arch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vamsikalagaturu@gmail.com">batsy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>orocos_kdl</depend>
  <depend>robif2b</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
